[package]
name = "usb"
version = "0.1.0"
authors = ["janis, janni"]

[dependencies]
cortex-m = "0.1.4"
r0 = "0.1.0"

[dependencies.stm32f7_discovery]
git = "https://github.com/f3e40/stm32f7_discovery"

[dependencies.embedded_stm32f7]
git = "https://github.com/f3e40/embedded_stm32f7"

[profile.release]
lto = true
